# Heim

./: .gitignore  LICENSE  README.md  meson.build
benchmark/: benchmark.cpp  core.hpp  creation.hpp  main.cpp
example/: readme.cpp
heim/: common.hpp  composer.hpp  composition.hpp  glimpse.hpp  heim.hpp  summoner.hpp  world.hpp
include/: allocator.hpp  component.hpp  component_manager.hpp  component_map.hpp  composer.hpp  composition.hpp  configuration.hpp  container.hpp  creation.hpp  creation_info.hpp  entity.hpp  entity_manager.hpp  fwd.hpp  glimpse.hpp  group.hpp  heim.hpp  index_map.hpp  index_map_old.hpp  iterator.hpp  map.hpp  pool.hpp  query_expression.hpp  raw_any.hpp  registry.hpp  scheme.hpp  type_sequence.hpp  unsafe_any.hpp  utility.hpp  world.hpp
include-old/: component.hpp
include-old/composition/: composer.hpp
include-old/glimpse/: glimpseable.hpp
include-old/harmony/: harmonizer.hpp
include/component/: any_composition.hpp  any_harmonized.hpp  composer.hpp  composition.hpp  harmonized.hpp  harmonized_iterator.hpp  harmonizer.hpp  iterator.hpp
include/components/: any_composition.hpp  composer.hpp  (+1 more)
meson/: clang-native.ini  gcc-native.ini
test/: benchmark.hpp  main.cpp  test.cpp  test.hpp  test_any_composition.cpp  test_component_manager.cpp  test_composition.cpp  test_config.cpp  test_creation.cpp  test_creation_info.cpp  test_entity_manager.cpp  test_include.cpp  test_index_map.cpp  test_raw_any.cpp  test_registry.cpp  test_unsafe_any.cpp
tests/: doctest.h  test_composition.cpp  test_glimpse.cpp  test_summoner.cpp  test_world.cpp
(+95 files in other folders)
